<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="driver_states_t" Id="{edf31b22-cefd-4f5e-8b10-3f921517b1b5}">
    <Declaration><![CDATA[TYPE driver_states_t :
(
	FOO,
	NotReadyToSwitchOn,
	Fault,
	FaultReactionActive,
	SwitchOnDisabled,
	ReadyToSwitchOn,
	SwitchedOn,
	OperationEnabled,
	QuickStopActive
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>