<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="InMotorPDO" Id="{fdfff181-66c9-4694-ab18-b085c1bee2d4}">
    <Declaration><![CDATA[TYPE InMotorPDO :
STRUCT
	statusword: UINT;
	fb_position: DINT;
	fb_velocity: DINT;
	fb_op_mode: SINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>